--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,49 @@
+body{
+    padding: 50px 0px;
+}
+
 header{
-    background-color: salmon;
+    height: 50px;
+    width: 100%;
+    margin: 0px 0px 30px 0px;
+    position: absolute;
+    top:0;
+    left:0;
+}
+
+ul{
+    text-align:right;
+    padding: 0px 10px;
+}
+
+footer{
+    clear: both;
+    width: 100%;
 }
 
 li{
     display: inline;
 }
 
-section{
-    width: 200px;
-    height: 200px;
-    background-color: sienna;
+figure{
+    float: left;
+}
+
+article{
+    float:right;
 }
 
 #image{
-    
+    width: 500px;
+    height: 250px;
+    background-color: skyblue;
+    padding: 10px 10px 30px;
+    float: left;
+}
+
+#overview{
+    width: 500px;
+    min-height: 250px;
+    background-color: skyblue;
+    padding: 10px;
 }
